rns-lang/tests/snapshots/parser-outside_class_directive-dot_end.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.end method ; trailing comment
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: Unexpected directive before class definition
   ╭─[ test_data/integration/parser/outside_class_directive/dot_end.ja:1:1 ]
   │
 1 │ .end method ; trailing comment
   │ ──┬─  
   │   ╰─── The '.end' directive has no matching start directive.
   │ 
   │ Note: The '.end' directive must match a previous '.method', '.code', or '.class' directive.
───╯
